<resources>
    <string name="app_name">DolphinWatch</string>
    <string name="start_watch">START WATCHING</string>
    <string name="welcome_text">DOLPHIN WATCH</string>
    <string name="logo">logo</string>
    <string name="title_activity_watching">WatchingActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="overview">OVERVIEW</string>
    <string name="land_sighting">Land Sighting Forms</string>
    <string name="big_eyes">Land Observation - Big Eyes</string>
    <string name="finish">Finish Observation</string>
</resources>
