<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/watchingTime"
            android:layout_width="250dp"
            android:layout_height="141dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="88dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="@string/welcome_text"
            android:textAppearance="@style/TextAppearance.AppCompat.Display1"
            android:textColorHighlight="#2196F3"
            app:fontFamily="serif" />

        <ImageView
            android:id="@+id/dolphinLogo"
            android:layout_width="278dp"
            android:layout_height="152dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@mipmap/dolphin_logo" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="99dp"
            android:layout_height="35dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:gravity="center"
            android:text="Name" />

        <EditText
            android:id="@+id/nameEditText"
            android:layout_width="251dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/startWatchButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="181dp"
            android:layout_height="71dp"
            android:layout_gravity="center"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="52dp"
            android:background="@android:color/holo_blue_light"
            android:text="@string/start_watch"
            android:textColorHighlight="#2196F3"
            android:textColorLink="#2196F3" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>